--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ayvazyan10/ameriabankvpos": "^2.1",
         "guzzlehttp/guzzle": "^7.2",
         "http-interop/http-factory-guzzle": "^1.2",
         "laravel/framework": "^10.43|^11.0",
