--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
         "postcss": "^8.4.35",
         "tailwindcss": "^3.4.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@tailwindcss/typography": "^0.5.16",
+        "postcss-nesting": "^13.0.2"
     }
 }
