--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ayvazyan10/ameriabankvpos": "^2.1",
         "guzzlehttp/guzzle": "^7.2",
         "http-interop/http-factory-guzzle": "^1.2",
+        "ibrahimbougaoua/radiobuttonimage": "^1.1",
         "laravel/framework": "^10.43|^11.0",
         "laravel/sanctum": "^3.3|^4.0",
         "laravel/tinker": "^2.8",
