--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0|^8.1",
         "phpunit/phpunit": "^10.1|^11.0.1",
+        "rulr/laravel-mailpot": "^1.0",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
