--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "lunarphp/table-rate-shipping": "^1.0@beta",
         "meilisearch/meilisearch-php": "^1.6",
         "novadaemon/filament-pretty-json": "^2.7",
-        "predis/predis": "^2.2"
+        "predis/predis": "^2.2",
+        "redberry/page-builder-plugin": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
